--- a/Readme
+++ b/Readme
@@ -55,6 +55,10 @@ CREATE TABLE bookings (
 node index.js
 
 
+OUTPUT:
+1. User Registration
+![image alt](https://github.com/ShetSahil/railway-management-system/blob/main/images/register.png?raw=true)
+
 
 
 
