--- a/Readme
+++ b/Readme
@@ -57,7 +57,7 @@ node index.js
 
 OUTPUT:
 1. User Registration
-![image alt](https://github.com/ShetSahil/railway-management-system/blob/main/images/register.png?raw=true)
+![Image Alt](https://github.com/ShetSahil/railway-management-system/blob/main/images/register.png?raw=true)
 
 
 
