--- a/Readme
+++ b/Readme
@@ -57,7 +57,7 @@ node index.js
 
 OUTPUT:
 1. User Registration
-![Image 1](images/register.png)
+![Alt text](https://user-images.githubusercontent.com/your-image-path.png)
 
 
 
