--- a/Readme
+++ b/Readme
@@ -57,7 +57,7 @@ node index.js
 
 OUTPUT:
 1. User Registration
-![Alt text](https://user-images.githubusercontent.com/your-image-path.png)
+![Alt text](https://github.com/ShetSahil/railway-management-system/blob/34e421cc8bd1e77b401d41ca99994a8549b05939/images/register.png)
 
 
 
